crates/assay-harness/src/snapshots/assay_harness__codex__tests__codex_cli_args_full.snap
---
source: crates/assay-harness/src/codex.rs
expression: "args.join(\"\\n\")"
---
exec
--full-auto
--model
o3
