crates/assay-harness/src/snapshots/assay_harness__codex__tests__codex_realistic_agents_md.snap
---
source: crates/assay-harness/src/codex.rs
expression: config.agents_md
---
## Agent Rules

You are a coding agent. Follow best practices.

---

## Project Context

This is a Rust workspace using Cargo.

---

## Task Spec

Implement the login endpoint with JWT auth.
---

## Hook Advisory

The following lifecycle hooks are defined for this session but cannot be
executed natively by Codex. They are listed here for reference:

- **before each tool invocation**: `bash scripts/pre-tool-check.sh` (timeout: 10s)
- **after each tool invocation**: `bash scripts/post-tool-log.sh` (timeout: 5s)
- **when the session stops**: `bash scripts/on-stop.sh` (timeout: 120s)
