crates/assay-harness/src/snapshots/assay_harness__codex__tests__codex_realistic_config_toml.snap
---
source: crates/assay-harness/src/codex.rs
expression: config.config_toml
---
model = "o3"
approval_policy = "full-auto"
sandbox_mode = "workspace-write"
